jupyternotebook para función local
está comentado la parte de lectura desde Google Colab hacia Drive, está funcional lectura de csv sobre la misma carpeta a nviel local

--- a/Actividad2analisisPandas_A01213723.ipynb
+++ b/Actividad2analisisPandas_A01213723.ipynb
@@ -109,8 +109,8 @@
         }
       ],
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "#from google.colab import drive\n",
+        "#drive.mount('/content/drive')"
       ]
     },
     {
@@ -119,7 +119,8 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "import seaborn as\n",
+        "import os"
       ],
       "metadata": {
         "id": "cjkIgvpcjL7b"
@@ -131,7 +132,7 @@
       "cell_type": "code",
       "source": [
         "#lectura desde drive---se ejcutó el ejercicio en Google Colab\n",
-        "df = pd.read_csv('/content/drive/MyDrive/IA ITESM/Ciencia de Datos/LaqnData.csv')"
+        "#df = pd.read_csv('/content/drive/MyDrive/IA ITESM/Ciencia de Datos/LaqnData.csv')"
       ],
       "metadata": {
         "id": "I_WTFyzcjG0j"
@@ -142,7 +143,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#df = pd.read_csv('./LaqnData.csv')"
+        "df = pd.read_csv('./LaqnData.csv')"
       ],
       "metadata": {
         "id": "pRaUdxt45kfP"
